Changed : Issue-1911 - Retired collapse component (#2039)
* Changed : Issue-1911 - Retired collapse component

* Changed : Issue-1911 - Retired collapse component

--- a/components/vf-collapse/vf-collapse.scss
+++ b/components/vf-collapse/vf-collapse.scss
@@ -16,9 +16,10 @@
  * Location: #{map-get($componentInfo, 'location')}
  */
 
-@import 'vf-collapse.variables.scss';
-
-.vf-collapse:before {
-  content: 'This component has not yet been implement, see the README.md for more information.';
-  display: block;
+// @import 'vf-collapse.variables.scss';
+html:not(.vf-disable-deprecated) {
+  .vf-collapse:before {
+    content: 'This component has not yet been implement, see the README.md for more information.';
+    display: block;
+  }
 }
